// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders correctly with defaults 1`] = `
.emotion-6 {
  z-index: 1;
}

.emotion-5 {
  padding: 15px;
  border-top: 1px solid #eeeeee;
  font-weight: 400;
  background: #fff;
  color: #323232;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  justify-self: left;
  padding-right: 15px;
  overflow: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 15px;
}

.emotion-0 {
  color: #323232;
  font-size: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-4 {
  background-color: #ee0000;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  font-family: Ciutadella;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  text-align: center;
  height: 48px;
  width: 100px;
  padding: 0px 0px 0px 1px;
}

.emotion-4:hover {
  background-color: #ba0000;
}

.emotion-4:active {
  background-color: #ba0000;
}

.emotion-4:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
}

<Footer
  actionText="mock actionText"
  closeAriaLabel="mock closeAriaLabel"
  onAction={[Function]}
  preFooter={null}
  primaryLabelAriaTitle="mock primaryLabelAriaTitle"
  primaryLabels={
    Array [
      "mock label one",
      "mock label two",
    ]
  }
>
  <div
    className="emotion-6"
  >
    <div
      className="emotion-5"
    >
      <span
        className="emotion-3"
        id="mockId"
        tabIndex={0}
        title="mock primaryLabelAriaTitle"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            mock label one
          </div>
          <div
            className="emotion-0"
          >
            mock label two
          </div>
        </div>
      </span>
      <Button
        aria-label="mock closeAriaLabel"
        className="runway-footer__button"
        cssOverrides={
          Array [
            Object {
              "fontFamily": "Ciutadella",
              "fontSize": "16px",
              "fontWeight": 400,
              "height": "48px",
              "letterSpacing": "1.5px",
              "lineHeight": "1.5",
              "padding": "0px 0px 0px 1px",
              "textAlign": "center",
              "width": "100px",
            },
          ]
        }
        label="mock actionText"
        onClick={[Function]}
        variant="solid"
      >
        <div
          className="runway-footer__button"
        >
          <button
            aria-label="mock closeAriaLabel"
            className="emotion-4"
            onClick={[Function]}
            type="button"
          >
            mock actionText
          </button>
        </div>
      </Button>
    </div>
  </div>
</Footer>
`;

exports[`Footer renders correctly with props 1`] = `
.emotion-7 {
  z-index: 1;
}

.emotion-6 {
  padding: 15px;
  border-top: 1px solid #eeeeee;
  font-weight: 400;
  background: #fff;
  color: #323232;
  padding-right: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  justify-self: left;
  padding-right: 15px;
  overflow: hidden;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 15px;
}

.emotion-1 {
  color: #323232;
  font-size: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  background-color: #ee0000;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1rem;
  width: 100%;
  height: 3.125rem;
  border-radius: 4px;
  border-width: 0;
  padding: 14px 24px 15px;
  font-weight: 700;
  line-height: 1.56;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  cursor: pointer;
  font-family: Ciutadella;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  text-align: center;
  height: 48px;
  width: 100px;
  padding: 0px 0px 0px 1px;
}

.emotion-5:hover {
  background-color: #ba0000;
}

.emotion-5:active {
  background-color: #ba0000;
}

.emotion-5:active {
  -webkit-transform: translate(1px,1px);
  -ms-transform: translate(1px,1px);
  transform: translate(1px,1px);
}

.emotion-0 {
  padding: 15px;
  border-top: 1px solid #eeeeee;
  padding-top: 9px;
  padding-bottom: 9px;
}

<Footer
  actionText="mock actionText"
  closeAriaLabel="mock closeAriaLabel"
  onAction={[Function]}
  preFooter="mock preFooter node"
  primaryLabelAriaTitle="mock primaryLabelAriaTitle"
  primaryLabels={
    Array [
      "mock label one",
      "mock label two",
    ]
  }
>
  <div
    className="emotion-7"
  >
    <div
      className="emotion-0"
    >
      mock preFooter node
    </div>
    <div
      className="emotion-6"
    >
      <span
        className="emotion-4"
        id="mockId"
        tabIndex={0}
        title="mock primaryLabelAriaTitle"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-1"
          >
            mock label one
          </div>
          <div
            className="emotion-1"
          >
            mock label two
          </div>
        </div>
      </span>
      <Button
        aria-label="mock closeAriaLabel"
        className="runway-footer__button"
        cssOverrides={
          Array [
            Object {
              "fontFamily": "Ciutadella",
              "fontSize": "16px",
              "fontWeight": 400,
              "height": "48px",
              "letterSpacing": "1.5px",
              "lineHeight": "1.5",
              "padding": "0px 0px 0px 1px",
              "textAlign": "center",
              "width": "100px",
            },
          ]
        }
        label="mock actionText"
        onClick={[Function]}
        variant="solid"
      >
        <div
          className="runway-footer__button"
        >
          <button
            aria-label="mock closeAriaLabel"
            className="emotion-5"
            onClick={[Function]}
            type="button"
          >
            mock actionText
          </button>
        </div>
      </Button>
    </div>
  </div>
</Footer>
`;
